# formals_prac

./: CMakeLists.txt  README.md  main.cpp
src/: Automata.cpp  Automata.h  CMakeLists.txt  Constants.h  DFA.cpp  DFA.h  State.h  StateDFA.h  Transition.h
tests/: NFA_input_data.h  tests.cpp
